Fix text overflow on post tabs

--- a/src/components/PostCard/PostCard.module.css
+++ b/src/components/PostCard/PostCard.module.css
@@ -5,6 +5,8 @@
   box-shadow: var(--default-box-shadow-value);
   background-color: var(--secondary-color);
   height: 8rem;
+
+  overflow: hidden;
 }
 
 .postCardContainer:hover {
